--- a/conf/application.conf
+++ b/conf/application.conf
@@ -400,6 +400,10 @@ system.batch.conf = jberet.properties
 
 # application.context = /application/
 
+# https://www.libreoffice.org
+# macOS
+libreoffice.command_path = "/Applications/LibreOffice.app/Contents/MacOS/soffice"
+
 # https://wkhtmltopdf.org
 # macOS
 wkhtmltopdf.command_path = "/usr/local/bin/wkhtmltopdf"
