--- a/conf/application.conf
+++ b/conf/application.conf
@@ -290,7 +290,7 @@ play.filters {
     #permittedCrossDomainPolicies = "master-only"
 
     # The Content-Security-Policy header. If null, the header is not set.
-    contentSecurityPolicy = "default-src 'self' https://www.youtube.com https://buttons.github.io; connect-src 'self' ws://localhost:9000; style-src 'self' blob: https://buttons.github.io; script-src 'self' https://buttons.github.io; img-src 'self' data: https://www.gravatar.com https://*.openstreetmap.org https://cdn.jsdelivr.net; font-src 'self' data:; frame-ancestors 'self' https://buttons.github.io;"
+    contentSecurityPolicy = "default-src 'self' https://www.youtube.com https://buttons.github.io; connect-src 'self' ws://localhost:9000; style-src 'self' blob: https://buttons.github.io; script-src 'self' blob: https://buttons.github.io; img-src 'self' data: https://www.gravatar.com https://*.openstreetmap.org https://cdn.jsdelivr.net; font-src 'self' data:; frame-ancestors 'self' https://buttons.github.io;"
     #contentSecurityPolicy = "default-src 'self'"
   }
 
