--- a/conf/application_test.conf
+++ b/conf/application_test.conf
@@ -6,6 +6,8 @@ play.modules {
 
 play.cache.createBoundCaches = false
 
+system.clock = "2020-01-01T01:01:01.000Z"
+
 test {
    locales = [ "en-US", "ja-JP" ],
    x_locales = [ "en-US"],
