--- a/.classpath
+++ b/.classpath
@@ -639,9 +639,9 @@
       <attribute name="javadoc_location" value="jar:file:/Users/hiro/.ivy2/cache/com.github.virtuald/curvesapi/docs/curvesapi-1.05-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
-  <classpathentry sourcepath="/Users/hiro/.ivy2/cache/org.apache.tika/tika-core/srcs/tika-core-1.19.1-sources.jar" kind="lib" path="/Users/hiro/.ivy2/cache/org.apache.tika/tika-core/bundles/tika-core-1.19.1.jar">
+  <classpathentry sourcepath="/Users/hiro/.ivy2/cache/org.apache.tika/tika-core/srcs/tika-core-1.20-sources.jar" kind="lib" path="/Users/hiro/.ivy2/cache/org.apache.tika/tika-core/bundles/tika-core-1.20.jar">
     <attributes>
-      <attribute name="javadoc_location" value="jar:file:/Users/hiro/.ivy2/cache/org.apache.tika/tika-core/docs/tika-core-1.19.1-javadoc.jar!/"/>
+      <attribute name="javadoc_location" value="jar:file:/Users/hiro/.ivy2/cache/org.apache.tika/tika-core/docs/tika-core-1.20-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
   <classpathentry sourcepath="/Users/hiro/.ivy2/cache/com.google.zxing/javase/srcs/javase-3.3.3-sources.jar" kind="lib" path="/Users/hiro/.ivy2/cache/com.google.zxing/javase/jars/javase-3.3.3.jar">
@@ -719,9 +719,9 @@
       <attribute name="javadoc_location" value="jar:file:/Users/hiro/.ivy2/cache/org.webjars.npm/jquery/docs/jquery-3.3.1-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
-  <classpathentry sourcepath="/Users/hiro/.ivy2/cache/org.webjars.npm/bootstrap/srcs/bootstrap-4.1.3-sources.jar" kind="lib" path="/Users/hiro/.ivy2/cache/org.webjars.npm/bootstrap/jars/bootstrap-4.1.3.jar">
+  <classpathentry sourcepath="/Users/hiro/.ivy2/cache/org.webjars.npm/bootstrap/srcs/bootstrap-4.2.1-sources.jar" kind="lib" path="/Users/hiro/.ivy2/cache/org.webjars.npm/bootstrap/jars/bootstrap-4.2.1.jar">
     <attributes>
-      <attribute name="javadoc_location" value="jar:file:/Users/hiro/.ivy2/cache/org.webjars.npm/bootstrap/docs/bootstrap-4.1.3-javadoc.jar!/"/>
+      <attribute name="javadoc_location" value="jar:file:/Users/hiro/.ivy2/cache/org.webjars.npm/bootstrap/docs/bootstrap-4.2.1-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="lib" path="/Users/hiro/.ivy2/cache/org.webjars/pickadate.js/jars/pickadate.js-3.5.6.jar">
@@ -1146,6 +1146,21 @@
       <attribute name="javadoc_location" value="jar:file:/Users/hiro/.ivy2/cache/org.webjars.npm/jsqr/docs/jsqr-1.1.1-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
+  <classpathentry sourcepath="/Users/hiro/.ivy2/cache/org.webjars.npm/holderjs/srcs/holderjs-2.9.4-sources.jar" kind="lib" path="/Users/hiro/.ivy2/cache/org.webjars.npm/holderjs/jars/holderjs-2.9.4.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/Users/hiro/.ivy2/cache/org.webjars.npm/holderjs/docs/holderjs-2.9.4-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/Users/hiro/.ivy2/cache/org.webjars.npm/shaven/srcs/shaven-0.8.1-sources.jar" kind="lib" path="/Users/hiro/.ivy2/cache/org.webjars.npm/shaven/jars/shaven-0.8.1.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/Users/hiro/.ivy2/cache/org.webjars.npm/shaven/docs/shaven-0.8.1-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/Users/hiro/.ivy2/cache/org.webjars.npm/escape-html/srcs/escape-html-1.0.3-sources.jar" kind="lib" path="/Users/hiro/.ivy2/cache/org.webjars.npm/escape-html/jars/escape-html-1.0.3.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/Users/hiro/.ivy2/cache/org.webjars.npm/escape-html/docs/escape-html-1.0.3-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
   <classpathentry sourcepath="/Users/hiro/.ivy2/cache/org.webjars.npm/3dmol/srcs/3dmol-1.3.7-sources.jar" kind="lib" path="/Users/hiro/.ivy2/cache/org.webjars.npm/3dmol/jars/3dmol-1.3.7.jar">
     <attributes>
       <attribute name="javadoc_location" value="jar:file:/Users/hiro/.ivy2/cache/org.webjars.npm/3dmol/docs/3dmol-1.3.7-javadoc.jar!/"/>
@@ -1164,6 +1179,11 @@
   <classpathentry sourcepath="/Users/hiro/.ivy2/cache/org.webjars.bower/chai/srcs/chai-4.1.1-sources.jar" kind="lib" path="/Users/hiro/.ivy2/cache/org.webjars.bower/chai/jars/chai-4.1.1.jar">
     <attributes>
       <attribute name="javadoc_location" value="jar:file:/Users/hiro/.ivy2/cache/org.webjars.bower/chai/docs/chai-4.1.1-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/Users/hiro/.ivy2/cache/org.webjars.npm/popper.js/srcs/popper.js-1.14.6-sources.jar" kind="lib" path="/Users/hiro/.ivy2/cache/org.webjars.npm/popper.js/jars/popper.js-1.14.6.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/Users/hiro/.ivy2/cache/org.webjars.npm/popper.js/docs/popper.js-1.14.6-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
   <classpathentry sourcepath="/Users/hiro/.ivy2/cache/org.webjars.npm/core-js/srcs/core-js-2.5.6-sources.jar" kind="lib" path="/Users/hiro/.ivy2/cache/org.webjars.npm/core-js/jars/core-js-2.5.6.jar">
