Follow Play Framework v2.7.0

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-﻿# This is the main configuration file for the application.
+# This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
 # ~~~~~
 # Play uses HOCON as its configuration file format.  HOCON has a number
@@ -57,7 +57,7 @@ play.modules {
   # By default, Play will load any class called Module that is defined
   # in the root package (the "app" directory), or you can define them
   # explicitly below.
-  # If there are any built-in modules that you want to disable, you can list them here.
+  # If there are any built-in modules that you want to enable, you can list them here.
   #enabled += my.application.Module
 
   # If there are any built-in modules that you want to disable, you can list them here.
@@ -235,7 +235,6 @@ play.filters {
   #disabled += filters.ExampleFilter
 
   disabled += play.filters.hosts.AllowedHostsFilter
-#  disabled += play.filters.headers.SecurityHeadersFilter
 
   enabled += play.filters.csp.CSPFilter
 
@@ -293,7 +292,6 @@ play.filters {
     #permittedCrossDomainPolicies = "master-only"
 
     # The Content-Security-Policy header. If null, the header is not set.
-    #contentSecurityPolicy = "default-src 'self' https://www.youtube.com https://buttons.github.io; connect-src 'self' ws://localhost:9000; style-src 'self' blob: https://buttons.github.io; script-src 'self' blob: https://buttons.github.io; img-src 'self' data: https://www.gravatar.com https://*.openstreetmap.org https://cdn.jsdelivr.net; font-src 'self' data:; frame-ancestors 'self' https://buttons.github.io;"
     #contentSecurityPolicy = "default-src 'self'"
   }
 
@@ -312,8 +310,8 @@ play.filters {
   # Play provides a filter that lets you configure which hosts can access your application.
   # This is useful to prevent cache poisoning attacks.
   hosts {
-    # Allow requests to example.com, its subdomains, and localhost:9000.
-    #allowed = [".example.com", "localhost:9000"]
+    # Allow requests to localhost on ports 9000 (dev) and 19001 (default test) ports
+    allowed = ["localhost:9000", "localhost:19001"]
   }
 }
 
