Follow Play Framework v2.8.0-M6

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -413,6 +413,11 @@ system.batch.conf = jberet.properties
 
 # application.context = /application/
 
+# https://www.mapbox.com/
+mapbox.maps {
+  access_token = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+}
+
 # https://portal.azure.com/
 microsoft.transrator {
   subscription_key = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
